[gd_scene load_steps=5 format=3 uid="uid://5ku2q4tf23ih"]

[ext_resource type="Script" uid="uid://drj6k78rfua3w" path="res://player/scripts/movement.gd" id="1_oul6g"]
[ext_resource type="Script" uid="uid://dxundqkpdatyc" path="res://player/scripts/object_spawner.gd" id="2_rkbax"]
[ext_resource type="Script" uid="uid://cvnfrei1wov6c" path="res://player/scripts/object_spawn_menu.gd" id="3_g1dw6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kqu6x"]

[node name="Player" type="CharacterBody3D"]
platform_floor_layers = 4294967294
script = ExtResource("1_oul6g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_kqu6x")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="head"]

[node name="PlaceRayCast" type="RayCast3D" parent="head"]
transform = Transform3D(10, 0, 0, 0, -4.371139e-07, -10, 0, 10, -4.371139e-07, 0, 0, 0)

[node name="ObjectSpawner" type="Node3D" parent="."]
script = ExtResource("2_rkbax")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 100

[node name="ObjectSpawn" type="PanelContainer" parent="CanvasLayer/MarginContainer"]
visible = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
script = ExtResource("3_g1dw6")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/ObjectSpawn"]
layout_mode = 2

[node name="WindowTitle" type="Label" parent="CanvasLayer/MarginContainer/ObjectSpawn/VBoxContainer"]
layout_mode = 2
text = "Spawn Objects"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/MarginContainer/ObjectSpawn/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HFlowContainer" type="HFlowContainer" parent="CanvasLayer/MarginContainer/ObjectSpawn/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="StatusBar" type="HBoxContainer" parent="CanvasLayer/MarginContainer/ObjectSpawn/VBoxContainer"]
layout_mode = 2

[node name="ObjectName" type="Label" parent="CanvasLayer/MarginContainer/ObjectSpawn/VBoxContainer/StatusBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "No object selected"

[node name="SpawnObject" type="Button" parent="CanvasLayer/MarginContainer/ObjectSpawn/VBoxContainer/StatusBar"]
layout_mode = 2
text = "Spawn Object"

[node name="PauseMenu" type="PanelContainer" parent="CanvasLayer/MarginContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/PauseMenu"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/PauseMenu/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/PauseMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DebugConsole" type="PanelContainer" parent="CanvasLayer/MarginContainer/PauseMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/PauseMenu/MarginContainer/HBoxContainer/DebugConsole"]
layout_mode = 2

[node name="PanelTitle" type="Label" parent="CanvasLayer/MarginContainer/PauseMenu/MarginContainer/HBoxContainer/DebugConsole/VBoxContainer"]
layout_mode = 2
text = "Debug Console"

[node name="Console" type="ScrollContainer" parent="CanvasLayer/MarginContainer/PauseMenu/MarginContainer/HBoxContainer/DebugConsole/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/PauseMenu/MarginContainer/HBoxContainer/DebugConsole/VBoxContainer/Console"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/PauseMenu/MarginContainer/HBoxContainer/DebugConsole/VBoxContainer"]
layout_mode = 2

[node name="CommandInput" type="LineEdit" parent="CanvasLayer/MarginContainer/PauseMenu/MarginContainer/HBoxContainer/DebugConsole/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Command"

[node name="SubmitButton" type="Button" parent="CanvasLayer/MarginContainer/PauseMenu/MarginContainer/HBoxContainer/DebugConsole/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Submit"

[connection signal="pressed" from="CanvasLayer/MarginContainer/ObjectSpawn/VBoxContainer/StatusBar/SpawnObject" to="CanvasLayer/MarginContainer/ObjectSpawn" method="_on_spawn_object_pressed"]
